--- a/src/apps/recordingsce/i18n/en-US.json
+++ b/src/apps/recordingsce/i18n/en-US.json
@@ -1,9 +1,8 @@
 {
 	"recordingsce": {
 		"title": "Recordings",
-		"description": "Feel free to update the HTML template located in /apps/recordingsce/views/layout.html. The Javascript to manage this app is located in /apps/recordingsce/app.js.",
+		"description": "Listen to the recordings of conversations",
 		"universalErrorMessageTemplate": "Please contact your system administrator to configure %api% API, required for this application to work",
-		"welcome": "Welcome {{variable}} to the Recordings App",
 		"recordingsTable": {
 			"title": "Recordings",
 			"columnHeader": {
