Fix timezone in header of column

--- a/src/apps/recordingsce/i18n/en-US.json
+++ b/src/apps/recordingsce/i18n/en-US.json
@@ -7,7 +7,7 @@
 			"title": "Recordings",
 			"columnHeader": {
 				"direction": "Inbound/Outbound",
-				"datetime": "Date/Time GMT+07:00",
+				"datetime": "Date/Time",
 				"user": "User",
 				"device": "Device",
 				"dialerNumber": "Dialer Number",
