--- a/src/apps/recordingsce/i18n/ru-RU.json
+++ b/src/apps/recordingsce/i18n/ru-RU.json
@@ -7,7 +7,7 @@
 			"title": "Записи разговоров",
 			"columnHeader": {
 				"direction": "Входящий/Исходящий",
-				"datetime": "Дата/Время GMT+07:00",
+				"datetime": "Дата/Время",
 				"user": "Пользователь",
 				"device": "Устройство",
 				"dialerNumber": "Номер звонящего",
